--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Наголоси</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-  <div>
-    <input class="btn btn-outline-dark mx-auto" type="button" onclick="settingCookie()" value="First Touch Here">
-    <input class="btn btn-outline-dark mx-auto" type="button" onclick="showNotification()" value="Notification">
+  <div class="container-fluid">
+    <h1 class="heading">Сайт чисто для кєнтіків</h1>
+    <input class="btn btn-outline-warning" type="button" onclick="settingCookie()" value="First Touch Here">
+    <input class="btn btn-outline-dark" type="button" onclick="showNotification()" value="Notification">
   </div>
 
 
   <script>
-    const words = ["агронОмія",
+    const words = [
+      "агронОмія",
       "алфАвІт",
       "Аркушик",
       "асиметрІя",
@@ -30,7 +36,8 @@
       "босОніж",
       "боЯзнь",
       "бурштинОвий",
-      "бюлетЕнь", "вАги (у множині)",
+      "бюлетЕнь",
+      "вАги (у множині)",
       "вантажІвка",
       "веснЯнИй",
       "вИгода (користь)",
@@ -43,10 +50,7 @@
       "вИсіти",
       "вИтрата",
       "вишИваний",
-      "відвезтИ",
-      "відвестИ",
       "вІдгомін",
-      "віднестИ",
       "вІдомість (список)",
       "відОмість (повідомлення, дані, популярність)",
       "вІрші",
@@ -68,11 +72,8 @@
       "діалОг",
       "добовИй",
       "добУток",
-      "довезтИ",
-      "довестИ",
       "довІдник",
       "дОгмат",
-      "донестИ",
       "дОнька",
       "дочкА",
       "дрОва",
@@ -80,8 +81,6 @@
       "єретИк",
       "жалюзІ",
       "завдАння",
-      "завезтИ",
-      "завестИ",
       "зАвжди",
       "завчасУ",
       "зАгадка",
@@ -92,7 +91,6 @@
       "зАкрутка",
       "залишИти",
       "замІжня",
-      "занестИ",
       "зАпонка",
       "заробІток",
       "зАставка",
@@ -136,7 +134,6 @@
       "металУргія",
       "мілімЕтр",
       "навчАння",
-      "нанестИ",
       "напІй",
       "нАскрізний",
       "нАчинка",
@@ -160,11 +157,8 @@
       "павИч",
       "партЕр",
       "пЕкарський",
-      "перевезтИ",
-      "перевестИ",
       "перЕкис",
       "перелЯк",
-      "перенестИ",
       "перЕпад",
       "перЕпис",
       "піалА",
@@ -182,10 +176,7 @@
       "понЯття",
       "порядкОвий",
       "посерЕдині",
-      "привезтИ",
-      "привестИ",
       "прИморозок",
-      "принестИ",
       "прИчіп",
       "прОділ",
       "промІжок",
@@ -219,7 +210,6 @@
       "травестІя",
       "тризУб",
       "тУлуб",
-      "украЇнський",
       "уподОбання",
       "урочИстий",
       "усерЕдині",
